add delete location logic
